--- a/angular.json
+++ b/angular.json
@@ -17,13 +17,21 @@
         "build": {
           "builder": "@angular/build:application",
           "options": {
+            "outputPath": "dist/electronica-franko",
             "browser": "src/main.ts",
+            "index": "src/index.html",
             "polyfills": [
               "zone.js"
             ],
             "tsConfig": "tsconfig.app.json",
             "inlineStyleLanguage": "scss",
             "assets": [
+              "src/favicon.ico",
+              {
+                "glob": "**/*",
+                "input": "src/assets",
+                "output": "assets/"
+              },
               {
                 "glob": "**/*",
                 "input": "public"
@@ -82,6 +90,12 @@
             "tsConfig": "tsconfig.spec.json",
             "inlineStyleLanguage": "scss",
             "assets": [
+              "src/favicon.ico",
+              {
+                "glob": "**/*",
+                "input": "src/assets",
+                "output": "assets/"
+              },
               {
                 "glob": "**/*",
                 "input": "public"
